Horizontal Scrolling fixed

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 .footer-block{
     display: block;
-    position: static;
-    width: 100%git ;
+    position: relative;
+    width: 100%;
     height: 20em;
     background-color: #33312eff;
     margin-top: 10rem;
@@ -9,5 +9,5 @@
 h1{
     color: cornsilk;
     text-align: center;
-    padding: 5rem;
+    padding: 3rem;
 }
