--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -12,6 +12,7 @@ $color5: #33312eff; */
     border-bottom: #611BE7 2px solid;
    background-color: #ffffff;
    box-shadow: 0px 0px 10px;
+   width: 100%;
 }
 
 
